Add desktop, without CSS and added a sqlite database.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,7 +36,7 @@ along with TypeOS.  If not, see <http://www.gnu.org/licenses/>.
         <ul>
             <li class="apps type-highlightable active">Apps</li>
             <ul class="tasklist">
-              <li onclick="get_exception()" class="type-highlightable">Chat</li>
+              <li onclick="desktop()" class="type-highlightable">Chat</li>
               <li class="type-highlightable">Webbrowser</li>
               <li class="type-highlightable">Image Editor</li>
             </ul>
