--- a/src/html/desktop.html
+++ b/src/html/desktop.html
@@ -1,17 +1,18 @@
 <div id="weather">
-    <h2>weather</h2>
-    <p>sunny <b>63 °F</b></p>
-    <img src="">
+  <h2 class="type-highlightable">weather</h2>
+  <p class="type-inactive">sunny <b>63 °F</b></p>
+  <img src="">
 </div>
 <div id="greeting">
-    <h2>good morning, <b>%user%</b></h2>
-    <ul>
-        <li>explore tips & tricks for typeos.</li>
-        <li>report bugs on github.</li>
-        <li>help translating</li>
-        <li>find help for typeos</li>
-    </ul>
+  <h2 class="type-active">good morning, <b>%user%</b></h2>
+  <ul class="type-inactive">
+    <li>explore tips & tricks for typeos.</li>
+    <li>report bugs on github.</li>
+    <li>help translating</li>
+    <li>find help for typeos</li>
+  </ul>
 </div>
 <div id="music">
-
+  <h2 class="type-highlightable">music</h2>
+  <p class="type-inactive">Terryfold by Chaos Chaos and Justin Roiland</p>
 </div>
