Add CSS for the desktop

--- a/src/html/desktop.html
+++ b/src/html/desktop.html
@@ -1,18 +1,33 @@
-<div id="weather">
-  <h2 class="type-highlightable">weather</h2>
-  <p class="type-inactive">sunny <b>63 °F</b></p>
-  <img src="">
-</div>
-<div id="greeting">
-  <h2 class="type-active">good morning, <b>%user%</b></h2>
-  <ul class="type-inactive">
-    <li>explore tips & tricks for typeos.</li>
-    <li>report bugs on github.</li>
-    <li>help translating</li>
-    <li>find help for typeos</li>
-  </ul>
-</div>
-<div id="music">
-  <h2 class="type-highlightable">music</h2>
-  <p class="type-inactive">Terryfold by Chaos Chaos and Justin Roiland</p>
+<div class="desktop-content">
+  <div class="weather">
+    <h2 class="type-inactive">weather</h2>
+    <p class="type-inactive">sunny<b class="type-active">63 °F</b></p>
+    <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg" class="type-svg-stroke-inactive">
+      <path d="M50.0815 73.4625C63.2353 73.4625 73.8985 62.7993 73.8985 49.6455C73.8985 36.4917 63.2353 25.8285 50.0815 25.8285C36.9278 25.8285 26.2645 36.4917 26.2645 49.6455C26.2645 62.7993 36.9278 73.4625 50.0815 73.4625Z" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"/>
+      <path d="M50 3.5V21" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"/>
+      <path d="M96 49.5H78.5" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"/>
+      <path d="M50 95.5V78" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"/>
+      <path d="M4 49.5H21.5" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"/>
+      <path d="M82.806 17.2545L70.3255 29.5215" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"/>
+      <path d="M17.755 16.694L30.022 29.1745" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"/>
+      <path d="M17.1945 81.7455L29.675 69.4785" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"/>
+      <path d="M82.246 82.3055L69.979 69.825" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"/>
+    </svg>      
+  </div>
+  <div class="greeting">
+    <h2 class="type-inactive">good morning, <b class="type-active">%user%</b></h2>
+    <ul>
+      <li><a href="javascript:void(0)" class="type-highlightable">explore tips & tricks for typeos.</a></li>
+      <li><a href="javascript:void(0)" class="type-highlightable">report bugs on github.</a></li>
+      <li><a href="javascript:void(0)" class="type-highlightable">help translating</a></li>
+      <li><a href="javascript:void(0)" class="type-highlightable">find help for typeos</a></li>
+    </ul>
+  </div>
+  <div class="music">
+    <h2 class="type-inactive">music</h2>
+    <p class="type-inactive">Ben Folds<b class="type-active">Philosophy</b></p>
+    <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg" class="type-svg-fill-inactive">
+      <path d="M57.7517 10H50.8371V64.9284C47.0139 63.4947 42.0665 63.4745 37.1863 65.2041C28.4433 68.3061 23.2339 75.8514 25.5502 82.0546C27.8675 88.2595 36.8329 90.7732 45.5751 87.6712C53.0009 85.0373 57.8586 79.198 57.7396 73.6983L57.7517 28.7768C69.8085 30.629 70.6335 45.4877 69.1895 49.6546C68.6413 51.2337 69.6068 52.4162 71.4292 49.6546C84.4291 29.9399 57.7517 21.2415 57.7517 10Z"/>
+    </svg>      
+  </div>
 </div>
