--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,6 +25,7 @@ along with TypeOS.  If not, see <http://www.gnu.org/licenses/>.
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <link rel="stylesheet" type="text/css" href="../css/panel.css" />
     <link rel="stylesheet" type="text/css" href="../css/controls.css" />
+    <link rel="stylesheet" type="text/css" href="../css/desktop.css" />
 
     <!-- JavaScripts -->
     <script>var exports = {};</script>
