* Fixed setup view * Edited README

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -45,7 +45,8 @@ along with TypeOS.  If not, see <http://www.gnu.org/licenses/>.
         </ul>
       </header>
     <div class="desktop type-background" id="appcontainer">
-        <!-- Here would be the content -->
+      <script>openSetup()</script>
+        <!-- Here would be the content dynamically created -->
     </div>
   </body>
 </html>
